# 2D-Gaussian-Splatting-with-libtorch

./: CMakeLists.txt  ConfigCamera.cpp  ConfigCamera.h  CudaRasterizerAutograd.h  DepthNormals.cpp  DepthNormals.h  DockerFile  GaussianModelMinimal.cpp  GaussianModelMinimal.h  GaussianModelStage1.cpp  GaussianModelStage1.h  LoadImages.cpp  LoadImages.h  ParceBinaries.cpp  ParceBinaries.h  README.md  SSIMLoss.cpp  SSIMLoss.h  ToyRasterizer.cpp  ToyRasterizer.h  docker-compose.yml  kernel.cu  kernel.h  main.cpp
cuda_knn/: simple_knn.cu  simple_knn.h  spatial.h
